project(realsense-noQT)
cmake_minimum_required(VERSION 2.8)
aux_source_directory(. SRC_LIST)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules/)
find_package( OpenCV REQUIRED )
#find_package(KernelHeaders REQUIRED)
add_executable(${PROJECT_NAME} ${SRC_LIST})
#include_directories(${KERNELHEADERS_INCLUDE_DIRS})
target_link_libraries( ${PROJECT_NAME} ${OpenCV_LIBS} )
